--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": " next dev --turbopack",
+    "convex": "bunx convex dev",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint"  
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.8",
